--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "bootstrap": "^4.5.3",
     "highcharts": "^8.2.2",
     "highcharts-angular": "^2.8.2",
     "rxjs": "~6.6.0",
